syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

// ----- Namespace -----

message Namespace {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  string display_name = 2;
  repeated string parents = 3;
  optional string description = 4;
  ai.floedb.floecat.common.ResourceId catalog_id = 5;
  optional string policy_ref = 6;
  google.protobuf.Timestamp created_at = 20;
  map<string,string> properties = 99;
}

message ListNamespacesRequest {
  oneof parent {
    ai.floedb.floecat.common.ResourceId catalog_id = 1;
    ai.floedb.floecat.common.ResourceId namespace_id = 2;
  }
  repeated string path = 4;
  bool children_only = 5;
  bool recursive = 6;
  string name_prefix = 7; 
  ai.floedb.floecat.common.PageRequest page = 8;
}
message ListNamespacesResponse {
  repeated Namespace namespaces = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message GetNamespaceRequest {
  ai.floedb.floecat.common.ResourceId namespace_id = 1;
}
message GetNamespaceResponse {
  Namespace namespace = 1;
}

message NamespaceSpec {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
  optional string display_name = 2;
  optional string description = 3;
  repeated string path = 4;
  optional string policy_ref = 5;
  map<string,string> properties = 99;
}

message CreateNamespaceRequest {
  NamespaceSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateNamespaceResponse {
  Namespace namespace = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message UpdateNamespaceRequest {
  ai.floedb.floecat.common.ResourceId namespace_id = 1;
  NamespaceSpec spec = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
  google.protobuf.FieldMask update_mask = 4;
}
message UpdateNamespaceResponse {
  Namespace namespace = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteNamespaceRequest {
  ai.floedb.floecat.common.ResourceId namespace_id = 1;
  bool require_empty = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
}
message DeleteNamespaceResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

// ----- Services -----

service NamespaceService {
  rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse);
  rpc GetNamespace(GetNamespaceRequest) returns (GetNamespaceResponse);
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);
  rpc UpdateNamespace(UpdateNamespaceRequest) returns (UpdateNamespaceResponse);
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);
}